added media query for toast size

--- a/src/styles.css
+++ b/src/styles.css
@@ -42,7 +42,7 @@ body {
 }
 
 .toast-container .ngx-toastr{
-  width: 500px;
+  width: 300px;
   border-radius: 15px;
   transition: box-shadow 0.25s;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.39), 0 6px 20px 0 rgba(0, 0, 0, 0.39);
@@ -63,4 +63,15 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.19), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+@media only screen and (max-width: 10000px) and (min-width: 769px) {
+  /* CSS that should be displayed if width is equal to or less than 10000px and larger
+   than 768px goes here */
+   .toast-container .ngx-toastr{
+    width: 500px;
+    border-radius: 15px;
+    transition: box-shadow 0.25s;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.39), 0 6px 20px 0 rgba(0, 0, 0, 0.39);
+  }
+
+}
 
