--- a/src/app/components/guest/sign-up/sign-up.component.html
+++ b/src/app/components/guest/sign-up/sign-up.component.html
@@ -57,7 +57,8 @@
             <div class="form-group">
               <label for="usernameField"><b class="fonts">Username</b></label>
               <input type="text" class="form-control" placeholder="Enter Your Username (Required)"
-                [formControlName]="'username'" maxlength="15">
+                [formControlName]="'username'" maxlength="15" #usernameField
+                (input)="usernameField.value = usernameField.value.toLowerCase()">
               <span class="form-error"
                 *ngIf="userInfoForm.get('username').invalid && userInfoForm.get('username').touched">Please
                 Provide a
