--- a/src/app/components/admin/admin-nav/admin-nav.component.html
+++ b/src/app/components/admin/admin-nav/admin-nav.component.html
@@ -11,7 +11,7 @@
         </li>
 
         <li class="nav-item p-1">
-          <a class="nav-link" [routerLink]="['/admin','inquiries']" routerLinkActive="active">Inquiries Lodged</a>
+          <a class="nav-link" [routerLink]="['/admin','inquiries']" routerLinkActive="active">Inquiry Management</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto p-2">
