--- a/src/app/components/admin/admin-inquiry/admin-inquiry.component.html
+++ b/src/app/components/admin/admin-inquiry/admin-inquiry.component.html
@@ -1,2 +1,18 @@
 <app-admin-nav></app-admin-nav>
 <app-bread-crumb [pageName]="'Pending Inquiries'"></app-bread-crumb>
+
+<div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12" style="padding-bottom: 15px;">
+        <span class="float-left" style="font-size: 24px;"><b class="fonts">All Unanswered Inquiries</b></span>
+        <span class="float-right" style="display: flex; align-items: center; min-height: 40px; color: green;">
+          <i>{{inquiryList.length}} Inquiries Available</i>
+        </span>
+      </div>
+    </div>
+
+
+
+  </div>
+</div>
