--- a/src/app/components/admin/admin-inquiry/admin-inquiry.component.html
+++ b/src/app/components/admin/admin-inquiry/admin-inquiry.component.html
@@ -5,14 +5,36 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12" style="padding-bottom: 15px;">
-        <span class="float-left" style="font-size: 24px;"><b class="fonts">All Unanswered Inquiries</b></span>
         <span class="float-right" style="display: flex; align-items: center; min-height: 40px; color: green;">
           <i>{{inquiryList.length}} Inquiries Available</i>
         </span>
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-sm-8">
+        <div class="row">
+          <div class="col-sm-5">
+            <div class="card">
+              <div class="row">
+                <div class="col-sm-12">
+                  <div class="card-header" style="text-align: center;">
+                    <span class="card-title" style="font-size: 17px;"><b style="font-weight: 500;">Submitted By:<br> Lakindu Hewawasam</b></span>
+                  </div>
+                  <div class="card-body">
 
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="col-sm-4">
+
+      </div>
+    </div>
 
   </div>
 </div>
