--- a/src/styles.css
+++ b/src/styles.css
@@ -58,10 +58,10 @@ body {
   font-weight: 300;
 }
 
-.toast-container .ngx-toastr:hover {
+/* .toast-container .ngx-toastr:hover {
   cursor: pointer;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.19), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+} */
 
 @media only screen and (max-width: 10000px) and (min-width: 769px) {
   /* CSS that should be displayed if width is equal to or less than 10000px and larger
