--- a/src/app/components/shared/user-profile/user-profile.component.html
+++ b/src/app/components/shared/user-profile/user-profile.component.html
@@ -88,7 +88,7 @@
       <div class="col-sm-6">
         <div class="form-group">
           <label><b class="fonts">Re-Enter Password</b></label>
-          <input type="password" value="" placeholder="Re-Enter Your New Password (Min 6 Characters)"
+          <input type="password" value="" placeholder="Re-Enter Your Password (Min 6 Characters)"
             class="form-control" [formControlName]="'secondPassword'" (input)="validatePassword()">
         </div>
       </div>
