--- a/src/app/components/admin/admin-inquiry/admin-inquiry.component.html
+++ b/src/app/components/admin/admin-inquiry/admin-inquiry.component.html
@@ -56,7 +56,7 @@
                 <i class="fas fa-phone-alt icon-format float-right" style="color: rgba(0, 0, 0, 0.699);"></i>
               </a>
               <a>
-                <i class="fad fa-info-circle icon-format float-right" style="color: #007bff;"></i>
+                <i class="fad fa-info-circle icon-format float-right" (click)="viewDetailedInquiry(inquiry.inquiryId)" style="color: #007bff;"></i>
               </a>
             </td>
           </tr>
